Large refactoring in progress

--- a/QoaToAiff/makefile
+++ b/QoaToAiff/makefile
@@ -2,8 +2,8 @@ CC = g++
 LD = g++
 CFLAGS = -fbaserel -O2 -fomit-frame-pointer -mregparm -fno-exceptions -fno-rtti -D__NOLIBBASE__
 LDFLAGS = -nostdlib -fbaserel -nostartfiles -fno-exceptions -fno-rtti
-LIBS = -lmfloat
-OBJS = start.o main.o sysfile.o timing.o frame.o
+LIBS = -lminteger -lmfloat
+OBJS = start.o main.o sysfile.o qoainput.o aiffoutput.o timing.o frame.o
 EXE = QoaToAiff
 
 all: $(OBJS)
