--- a/QoaToAiff/makefile
+++ b/QoaToAiff/makefile
@@ -32,8 +32,8 @@ frame.o: frame.s
 
 aiffoutput.o: aiffoutput.cpp main.h aiffoutput.h sysfile.h
 frame.o: frame.s
-main.o: main.cpp main.h errors.h timing.h qoainput.h sysfile.h aiffoutput.h
-qoainput.o: qoainput.cpp main.h errors.h qoainput.h sysfile.h
-start.o: start.cpp
+main.o: main.cpp main.h errors.h timing.h qoainput.h sysfile.h aiffoutput.h locale.h
+qoainput.o: qoainput.cpp main.h errors.h locale.h qoainput.h sysfile.h
+start.o: start.cpp main.h
 sysfile.o: sysfile.cpp sysfile.h main.h errors.h
 timing.o: timing.cpp main.h timing.h
