Numbers in console output are formatted according to the system locale Release 1.1

--- a/QoaToAiff/makefile
+++ b/QoaToAiff/makefile
@@ -3,7 +3,7 @@ LD = g++
 CFLAGS = -fbaserel -O2 -fomit-frame-pointer -mregparm -fno-exceptions -fno-rtti -D__NOLIBBASE__
 LDFLAGS = -nostdlib -fbaserel -nostartfiles -fno-exceptions -fno-rtti
 LIBS = -lminteger -lmfloat
-OBJS = start.o main.o sysfile.o qoainput.o aiffoutput.o timing.o frame.o
+OBJS = start.o main.o sysfile.o qoainput.o aiffoutput.o timing.o frame.o nicenumber.o
 EXE = QoaToAiff
 
 all: $(OBJS)
@@ -20,7 +20,7 @@ start.o: start.cpp
 	@echo "Compiling $@..."
 	@$(CC) $(CFLAGS) -fwritable-strings -c -o $@ $<
 
-frame.o: frame.s
+%.o: %.s
 	@echo "Assembling $@..."
 	@Vasm -Faout -no-opt -o $@ $<
 
@@ -32,8 +32,9 @@ frame.o: frame.s
 
 aiffoutput.o: aiffoutput.cpp main.h aiffoutput.h sysfile.h
 frame.o: frame.s
-main.o: main.cpp main.h errors.h timing.h qoainput.h sysfile.h aiffoutput.h locale.h
-qoainput.o: qoainput.cpp main.h errors.h locale.h qoainput.h sysfile.h
+main.o: main.cpp main.h errors.h timing.h qoainput.h sysfile.h aiffoutput.h locale.h nicenumber.h
+nicenumber.o: nicenumber.cpp locale.h nicenumber.h main.h
+qoainput.o: qoainput.cpp main.h errors.h locale.h qoainput.h sysfile.h nicenumber.h
 start.o: start.cpp main.h
 sysfile.o: sysfile.cpp sysfile.h main.h errors.h
 timing.o: timing.cpp main.h timing.h
